# bitmaps

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  bitmaps.cabal  default.nix  hie.yaml  release.nix  shell.nix
nix/: pkgs.nix
src/Data/: BitMap.hs
src/Data/BitMap/: Core.hs  Prim.hs  Unsafe.hs
src/Data/BitMap/Prim/: Core.hs  Unsafe.hs
src/Data/BitTable/: Core.hs
test/: Test.hs
test/Test/: BitMap.hs  Compat.hs  Core.hs
test/Test/BitMap/: Class.hs  Construction.hs  Gen.hs  List.hs  Query.hs  Range.hs
test/Test/BitMap/Class/: Bits.hs  Eq.hs  Ord.hs
